--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+<title>Rosse</title>
+<meta name="title" content="Rosse" />
+<meta name="description" content="" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/html/remeras.html" />
+<meta property="og:title" content="Rosse" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://enzo-centurion.github.io/git-proyecto-final-Rosse/html/remeras.html" />
+<meta property="twitter:title" content="Rosse" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
